--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,3 +78,19 @@ jobs:
       - name: Generate site
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
 
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ${{ env.BUILD_PATH }}/out
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
+    runs-on: ubuntu-latest
+    name: Deploy
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
